# QuickAwsF1F2

./: .gitignore  README.md
f1-example-2024-1/: CMakeLists.txt  kernel.cpp  main.cpp
f1-example-2024-1/docs/: how.to.use.clion.md
f1-ubuntu-2024-1/: common.sh  runme.sh
